# llamapackageservice

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  LICENSE  PERMISSION_ERROR_SUMMARY.md  PERMISSION_FIX.md  PERMISSION_FIX_VISUAL.txt  QUICK_REFERENCE.md  README.md  WARNINGS_FIXED_REPORT.md  bootstrap.sh  build-automation.sh  build-integration.sh  build.sh  config.json  docker-compose.yml  docker-run.sh  fix_all.sh  fix_all_errors.sh  fix_errors.sh  fix_remaining_errors.sh  install.sh  prompt.txt  pyproject.toml  requirements.txt  setup.py  setup.sh  test_permission_fix.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
assets/: architecture.puml  ascii_logo.txt  logo.txt
autonomous-agent-master/: Cargo.toml  README.md  build.sh
autonomous-agent-master/config/: master.toml
autonomous-agent-master/src/: lib.rs  main.rs
autonomous-agent-master/src/agents/: mod.rs  orchestrator.rs
autonomous-agent-master/src/core/: context.rs  decision_engine.rs  decisions.rs  mod.rs
autonomous-agent-master/src/execution/: mod.rs
autonomous-agent-master/src/integrations/: mod.rs
autonomous-agent-master/src/knowledge/: mod.rs
autonomous-agent-master/src/learning/: mod.rs
docs/: DOCUMENTATION.md  USER_GUIDE.md  api.md  examples.md  index.md  installation.md  usage.md
docs/api/: index.md
github-manager/: README.md  README_LLAMASEARCH.md  llamasearch-manager  requirements.txt  setup-llamasearch.sh  setup.sh  test_rust_cli.sh  test_system.py
github-manager/config/: llamasearch_advanced.yaml  llamasearch_config.yaml
github-manager/docs/: architecture.md
github-manager/examples/: integration_example.py  llamasearch_example.py
github-manager/rust-cli/: Cargo.toml  README.md
github-manager/rust-cli/src/: app.rs  cli.rs  commands.rs  config.rs  error.rs  github.rs  lib.rs  main.rs  security.rs  tui.rs  utils.rs
github-manager/rust-cli/src/browser/: components.rs  handlers.rs  mod.rs  state.rs
github-manager/rust-cli/src/browser/views/: analytics_view.rs  code_view.rs  file_explorer.rs  help_view.rs  mod.rs  repository_detail.rs  repository_list.rs  search_view.rs  security_view.rs  workflow_view.rs
github-manager/rust-cli/tests/: cli_tests.rs  error_tests.rs  integration_tests.rs  view_tests.rs
github-manager/src/: __init__.py  llamasearch_manager.py  llamasearch_manager_advanced.py
github-manager/src/cli/: __init__.py  commands.py
github-manager/src/core/: __init__.py  (+7 more)
llama-operate-integration/: Cargo.toml  README.md  config.toml
llama-operate-integration/migrations/: 001_initial.sql
llama-operate-integration/src/: lib.rs  main.rs
llama-operate-integration/src/automation/: mod.rs
llama-operate-integration/src/bridge/: mod.rs
llama-operate-integration/src/command_center/: mod.rs
llama-operate-integration/src/monitoring/: mod.rs
llama-operate-integration/src/telemetry/: mod.rs
llama-operate-integration/src/workflows/: mod.rs
llama-operate-integration/tests/: integration_test.rs
llamapackageservice/: __init__.py  main.py  utils.py
operate-enhanced/: README.md  pyproject.toml  setup.py
operate-enhanced/operate/: __init__.py  main.py
operate-enhanced/operate/api/: __init__.py  server.py
operate-enhanced/operate/core/: __init__.py  orchestrator.py  performance.py
operate-enhanced/operate/integrations/: __init__.py  github_manager.py
operate-enhanced/operate/interfaces/: __init__.py  base.py
operate-enhanced/operate/models/: __init__.py  model_manager.py
operate-enhanced/operate/security/: __init__.py  guardian.py
operate-enhanced/operate/state/: __init__.py  manager.py
operate-enhanced/operate/utils/: __init__.py  action_handler.py  ocr.py  screenshot.py
prompts/: hybrid_code_engine_master.md  prompt.txt  system_prompt.txt
python/: README.md  pyproject.toml
python/src/llamapackageservice/: __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  error.py  output_organizer.py  parallel.py  ui.py
python/src/llamapackageservice/agents/: __init__.py  analysis.py  openai_agent.py
python/src/llamapackageservice/processors/: __init__.py  base.py  common.py  crates.py  factory.py  github.py  go.py  local.py  npm.py  pypi.py
python/src/llamapackageservice/utils/: __init__.py  path.py  retry.py
python/tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_error.py  test_integration.py  test_processors.py
scripts/: check_docs.sh  fix-cache.sh  fix-common.sh  fix-config.sh  fix-error.sh  fix-fixes.sh  fix-github.sh  fix-lib.sh  fix-package-processor.sh  fix-registry.sh
src/: api.rs  cache.rs  cache_tests.rs  cli.rs  code2txt.rs  deepseek_integration.rs  error.rs  file_organizer.rs  graphics.rs  installation.rs  lib.rs  llama_integration.rs  llama_ui.rs  llm_interface.rs  logging.rs  main.rs  metrics.rs  mlx_client.rs  orchestrator.rs  output_organizer.rs  package_processor.rs  parallel.rs  processor_trait.rs  prompts.rs  rate_limiter.rs  repo_processor.rs  test_suite.rs  test_utils.rs  ui.rs
src/agents/: analysis.rs  conversation.rs  mod.rs  tools.rs
src/analytics/: mod.rs
src/config/: env_manager.rs  mod.rs
src/extended_processors/: mod.rs  output_paths.rs
src/github/: mod.rs
src/graphics/: banner.rs
src/mlx/: client.rs  mod.rs  types.rs
src/processors/: common.rs  cookbook.rs  crates.rs  crates_processor.rs  github.rs  github_org.rs  go.rs  local.rs  mod.rs  node.rs  npm.rs  pypi.rs  pypi_profile.rs  registry.rs  rust_pkg.rs  tests.rs
src/telemetry/: mod.rs
src/testing/: mocks.rs
src/tests/: mod.rs
src/ui/: progress.rs
src/utils/: cache.rs  github_client.rs  mod.rs  path.rs  permissions.rs  retry.rs
templates/: index.html  module_doc_template.rs
test_data/: github_response.json  mlx_response.json  pypi_package.json  repo.json
tests/: doc_tests.rs  github_test.rs  github_tests.rs  integration_tests.rs  local_path_processing.rs  path_normalization.rs  pypi_tests.rs  run_tests.sh  test_main.py
tests/common/: mod.rs
tests/helpers/: mod.rs
(+8 files in other folders)
