[package]
name = "llama-operate-integration"
version = "3.0.0"
edition = "2021"
authors = ["LlamaAgents Team"]
description = "Unified system for AI-powered GitHub repository and program management"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LlamaAgents integration
llamaagent = { path = "../llamaagent" }

# Python integration for Operate Enhanced
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = "0.20"

# GitHub integration
octocrab = "0.32"
git2 = "0.18"

# Database and state management
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5"
parking_lot = "0.12"

# Testing
mockall = "0.12"
proptest = "1.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bin]]
name = "llama-operate"
path = "src/main.rs"

[lib]
name = "llama_operate"
path = "src/lib.rs"