[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamapackageservice"
version = "0.1.0"
description = "A comprehensive package processing and analysis tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nik Jois", email = "nikjois@llamasearch.ai"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
]
keywords = ["package", "analyzer", "documentation", "github", "pypi", "npm", "llm"]

dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
llamapackage = "llamapackageservice.cli:main"
llama-package-service = "llamapackageservice.cli:main"

[project.urls]
Homepage = "https://github.com/llamasearch/llamapackageservice"
Documentation = "https://llamasearch.ai/docs"
Repository = "https://github.com/llamasearch/llamapackageservice"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
