[package]
name = "llamasearch-cli"
version = "1.0.0"
edition = "2021"
authors = ["LlamaSearchAI Team"]
description = "Advanced GitHub Repository Manager CLI with Terminal Browser"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI and TUI
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
crossterm = { version = "0.27", features = ["serde"] }
ratatui = { version = "0.25", features = ["all-widgets"] }
tui-textarea = "0.4"
tui-tree-widget = "0.16"

# HTTP and API
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
octocrab = "0.32"  # GitHub API client

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Security
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
jsonwebtoken = "9.2"

# File handling
dirs = "5.0"
walkdir = "2.4"
ignore = "0.4"
notify = "6.1"
tempfile = "3.8"

# Git operations
git2 = "0.18"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
skim = "0.10"  # Fuzzy finder
syntect = "5.1"  # Syntax highlighting
comfy-table = "7.1"
unicode-width = "0.1"
textwrap = "0.16"

# Testing
mockall = "0.12"
fake = "2.9"
pretty_assertions = "1.4"

# Performance
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
futures = "0.3"

# Configuration
config = "0.13"
dotenv = "0.15"

# WebSocket for real-time features
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Database for caching
sled = "0.34"
bincode = "1.3"

# Browser engine
scraper = "0.18"
ego-tree = "0.6"
selectors = "0.25"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"
serial_test = "3.0"
wiremock = "0.5"

[[bin]]
name = "llamasearch"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2